--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,8 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Ubuntu, "Helvetica Neue", sans-serif;
+  font-family: Google Sans Display, "sans-serif";
 }
 
 .loader {
