--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
+@import url("http://fonts.googleapis.com/css?family=Google+Sans:400,500,700|Google+Sans+Display:400,500,700|Roboto+Mono:400,700&lang=en");
 
 body {
   font-family: Google Sans Display, "sans-serif";
