--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -1,3 +1,9 @@
+@import url("http://fonts.googleapis.com/css?family=Google+Sans:400,500,700|Google+Sans+Display:400,500,700|Roboto+Mono:400,700&lang=en");
+
+body {
+  font-family: Google Sans Display, "sans-serif";
+}
+
 .hero-container {
   .hero-text-section {
     max-width: 10.5em;
