--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -1,5 +1,6 @@
 @import url("http://fonts.googleapis.com/css?family=Google+Sans:400,500,700|Google+Sans+Display:400,500,700|Roboto+Mono:400,700&lang=en");
 
+html,
 body {
   font-family: Google Sans Display, "sans-serif";
 }
