--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,9 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Oswald:300;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
 @import url("http://fonts.googleapis.com/css?family=Google+Sans:400,500,700|Google+Sans+Display:400,500,700|Roboto+Mono:400,700&lang=en");
 
+html,
 body {
   font-family: Google Sans Display, "sans-serif";
 }
@@ -31,7 +28,6 @@ body {
       font-size: 6vw;
       text-transform: uppercase;
       font-weight: 900;
-      font-family: "Fugaz One", cursive;
     }
     .feature-slide-description {
       font-size: 1.5rem;
