--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -7,15 +7,17 @@ body {
 
 .Nav_container {
   h1 {
-    font-size: 24px;
+    font-size: 22px;
     color: #5f6368;
+    margin-left: 50px;
   }
   p {
     font-size: 12px;
     color: white;
-    padding: 5px;
+    padding: 15px;
     background-color: #1a73e8;
     border-radius: 3px;
+    margin-right: 20px;
   }
   .logo__google {
     margin-left: -5px;
@@ -123,7 +125,7 @@ body {
         position: absolute;
         width: 64%;
         height: auto;
-        top: 10%;
+        top: 13%;
         left: 9%;
         border-radius: 20px;
         overflow: hidden;
