--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -42,7 +42,7 @@ body {
     position: relative;
     img {
       width: 100%;
-      height: 100%;
+      height: 60%;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -50,7 +50,7 @@ body {
       transition: all 1s ease-in-out;
       transform: scale(1.3);
       position: absolute;
-      top: 0;
+      top: 20%;
       &.as-primary {
         opacity: 1;
         transform: scale(1.1);
