--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -5,6 +5,21 @@ body {
   font-family: Google Sans Display, "sans-serif";
 }
 
+$breakpoint-tablet: 770px;
+$breakpoint-laptop: 998px;
+@media (min-width: $breakpoint-tablet) {
+  .btn__main_mobile {
+    display: none;
+    visibility: hidden;
+  }
+}
+
+@media (max-width: $breakpoint-laptop) {
+  .btn__main {
+    visibility: hidden;
+  }
+}
+
 .Nav_container {
   h1 {
     font-size: 22px;
