--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Google+Sans:400,500,700|Google+Sans+Display:400,500,700|Roboto+Mono:400,700&lang=en");
+@import url("http://fonts.googleapis.com/css?family=Google+Sans+Display:400,500,700");
 
 html,
 body {
