--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Google+Sans+Display:400,500,700");
+@import url("https://fonts.googleapis.com/css?family=Google+Sans+Display:400,500,700");
 
 html,
 body {
