--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -18,6 +18,31 @@ $breakpoint-laptop: 998px;
   .btn__main {
     visibility: hidden;
   }
+
+  .hero-phone-block {
+    position: absolute;
+    width: 364px;
+    height: 650px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-40%) scale(1.5);
+    .hero-phone-template {
+      background-position: center;
+      background-size: 100%;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 100%;
+      video {
+        position: absolute;
+        width: 64%;
+        height: auto;
+        top: 5%;
+        left: 9%;
+        border-radius: 20px;
+        overflow: hidden;
+      }
+    }
+  }
 }
 
 .Nav_container {
